Fixed prompt border overlap

--- a/src/app/components/prompt/prompt.component.scss
+++ b/src/app/components/prompt/prompt.component.scss
@@ -9,10 +9,10 @@
     padding-left: 10px;
     margin-bottom: 5px;
 
-    border: 0px solid var(--select-color, #ff0000);
-    border-width: 3px;
-    margin-right: -3px;
-    border-radius: 5px;
+    border: 3px solid var(--select-color, #ff0000);
+    border-right-width: 0;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 
     transition:
         opacity 0.3s ease,
